<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PlayerStatsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.PlayerStatsFragment">


        <ImageView
            android:id="@+id/iv_playerImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </ImageView>


        <LinearLayout
            android:id="@+id/ll_player_personal_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="250dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_playerImage">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/player_personal_information"
                android:textColor="@color/colorPrimaryText"
                android:textSize="18sp"
                >

            </TextView>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/player_name"
                    android:textSize="18sp">

                </TextView>

                <TextView
                    android:id="@+id/tv_player_name"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:gravity="center"
                    android:text="Neymar JR."
                    android:textSize="18sp">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/player_nationality"
                    android:textSize="18sp">

                </TextView>

                <TextView
                    android:id="@+id/tv_player_country"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:gravity="center"
                    android:text="Brazil"
                    android:textSize="18sp">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/player_age"
                    android:textSize="18sp">

                </TextView>

                <TextView
                    android:id="@+id/tv_player_age"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:gravity="center"
                    android:text="32"
                    android:textSize="18sp">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/player_height"
                    android:textSize="18sp">

                </TextView>

                <TextView
                    android:id="@+id/tv_player_height"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:gravity="center"
                    android:text="175cm"
                    android:textSize="18sp">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/player_weight"
                    android:textSize="18sp">

                </TextView>

                <TextView
                    android:id="@+id/tv_player_weight"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:gravity="center"
                    android:text="70kg"
                    android:textSize="18sp">

                </TextView>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_match_stats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_player_personal_info">

            <TextView
                android:id="@+id/statText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/player_match_stats"
                android:textColor="@color/colorPrimaryText"
                android:textSize="18sp">

            </TextView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/player_shots"
                    android:textSize="18sp">

                </TextView>

                <TextView
                    android:id="@+id/tv_player_shots"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:gravity="center"
                    android:text="28/34"
                    android:textSize="18sp">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/player_passes"
                    android:textSize="18sp">

                </TextView>

                <TextView
                    android:id="@+id/tv_player_passes"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:gravity="center"
                    android:text="157/192"
                    android:textSize="18sp">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/player_goals"
                    android:textSize="18sp">

                </TextView>

                <TextView
                    android:id="@+id/tv_player_goals"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:gravity="center"
                    android:text="12"
                    android:textSize="18sp">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/player_duels"
                    android:textSize="18sp">

                </TextView>

                <TextView
                    android:id="@+id/tv_player_duels"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:gravity="center"
                    android:text="29/42"
                    android:textSize="18sp">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/assists"
                    android:textSize="18sp">

                </TextView>

                <TextView
                    android:id="@+id/tv_player_assists"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:gravity="center"
                    android:text="5"
                    android:textSize="18sp">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_saved_shots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/saved_shots"
                    android:textSize="18sp">

                </TextView>

                <TextView
                    android:id="@+id/tv_saved_shots"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:gravity="center"
                    android:text="32"
                    android:textSize="18sp">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_conceded_goals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/goals_conceded"
                    android:textSize="18sp">

                </TextView>

                <TextView
                    android:id="@+id/tv_goals_conceded"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:gravity="center"
                    android:text="5"
                    android:textSize="18sp">

                </TextView>
            </LinearLayout>


        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>