<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/ll_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/iv_playerImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            app:srcCompat="@drawable/ic_launcher_background">

        </ImageView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:text="@string/player_name"
                    android:textSize="18sp">

                </TextView>

                <TextView
                    android:id="@+id/tv_player_name"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:gravity="center"
                    android:text="Alexander Arnold"
                    android:textSize="18sp">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:text="@string/player_age"
                    android:textSize="18sp">

                </TextView>

                <TextView
                    android:id="@+id/tv_player_age"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:gravity="center"
                    android:text="20"
                    android:textSize="18sp">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:text="@string/player_position"
                    android:textSize="18sp">

                </TextView>

                <TextView
                    android:id="@+id/tv_player_position"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:gravity="center"
                    android:text="Right-Back"
                    android:textSize="18sp">

                </TextView>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>